Fixed align Center of Post

--- a/src/App.css
+++ b/src/App.css
@@ -33,4 +33,8 @@
 
 .app__posts {
   padding: 20px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
 }
